// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sample /> should render 1`] = `
<sample__StyledContainer>
  <h1>
    <FormattedMessage
      id="homepage.title"
    />
  </h1>
  <h3>
    To get started, search your project for // TODO
    <br />
    This is a sample component that uses a sample action + reducer, it fetches posts from a remote server and displays them
  </h3>
  <img
    alt="refresh"
    onClick={[Function]}
    src="https://www.materialui.co/materialIcons/navigation/refresh_grey_192x192.png"
  />
  <h2>
    Posts from remote server
  </h2>
  <div />
</sample__StyledContainer>
`;

exports[`<Sample /> should render 3 posts 1`] = `
<sample__StyledContainer>
  <h1>
    <FormattedMessage
      id="homepage.title"
    />
  </h1>
  <h3>
    To get started, search your project for // TODO
    <br />
    This is a sample component that uses a sample action + reducer, it fetches posts from a remote server and displays them
  </h3>
  <img
    alt="refresh"
    onClick={[Function]}
    src="https://www.materialui.co/materialIcons/navigation/refresh_grey_192x192.png"
  />
  <h2>
    Posts from remote server
  </h2>
  <div>
    <sample__StyledPost
      key="1"
    >
      <h4>
        first post
      </h4>
      <p>
        first post content
      </p>
    </sample__StyledPost>
    <sample__StyledPost
      key="2"
    >
      <h4>
        second post
      </h4>
      <p>
        second post content
      </p>
    </sample__StyledPost>
    <sample__StyledPost
      key="3"
    >
      <h4>
        third post
      </h4>
      <p>
        third post content
      </p>
    </sample__StyledPost>
  </div>
</sample__StyledContainer>
`;

exports[`<Sample /> should render loading when component is in loading state 1`] = `
<sample__StyledContainer>
  <h1>
    <FormattedMessage
      id="homepage.title"
    />
  </h1>
  <h3>
    To get started, search your project for // TODO
    <br />
    This is a sample component that uses a sample action + reducer, it fetches posts from a remote server and displays them
  </h3>
  <img
    alt="refresh"
    onClick={[Function]}
    src="https://www.materialui.co/materialIcons/navigation/refresh_grey_192x192.png"
  />
  <h2>
    Posts from remote server
  </h2>
  <div>
    loading...
  </div>
</sample__StyledContainer>
`;
